2001-10-10  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-server-connection.[ch]: re-added

	* gda-server-provider.c (gda_server_provider_open_connection): impl
	(gda_server_provider_close_connection): impl

2001-10-08  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-server-provider.[ch]: new class for the implementation of
	GDA database providers

2001-10-07  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-server.[ch]: refactored, to be flexible enough for all our
	CORBA factory needs

	* Makefile.am: install headers in version-based directory

2001-08-22  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-server-error.[ch] (gda_server_error_make): moved to
	gda-server-connection.c and removed this file

	* gda-server-init.c: switched to bonobo-activation

	* gda-server-connection.[ch]:
	* gda-server-recordset.[ch]:
	* gda-server.[ch]:
	* gda-server-command.[ch]: switched to GObject

2001-08-19  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-server-field.[ch]: moved to gda-common

2001-07-31  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-server-connection.c (impl_GDA_Connection_open): unref the
	GdaServerConnection if the connection attempt failed, thus not
	leaving the providers around with no clients connected to them

2001-07-24  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-server-recordset.c (impl_GDA_Recordset_moveNext,
	impl_GDA_Recordset_movePrev): new CORBA methods

	(impl_GDA_Recordset_move): removed

2001-07-21  Rodrigo Moya <rodrigo@gnome-db.org>

        * *.h: s/#if defined(__cplusplus).../G_BEGIN_END_DECLS

2001-07-15  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-server-connection.c (impl_GDA_Connection_openSchema): removed
	extra & in call to gda_error_to_exception, which was causing providers
	to core dump when NULL was returned from the ::open_schema method
	with no error attached to the connection

2001-07-14  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-server-connection.[ch] (gda_server_connection_add_listener):
	new method