@@ -1,0 +1,57 @@
+/* GDA server library
+ * Copyright (C) 1998-2001 The Free Software Foundation
+ *
+ * AUTHORS:
+ *	Rodrigo Moya <rodrigo@gnome-db.org>
+ *
+ * This Library is free software; you can redistribute it and/or
+ * modify it under the terms of the GNU Library General Public License as
+ * published by the Free Software Foundation; either version 2 of the
+ * License, or (at your option) any later version.
+ *
+ * This Library is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+ * Library General Public License for more details.
+ *
+ * You should have received a copy of the GNU Library General Public
+ * License along with this Library; see the file COPYING.LIB.  If not,
+ * write to the Free Software Foundation, Inc., 59 Temple Place - Suite 330,
+ * Boston, MA 02111-1307, USA.
+ */
+
+#if !defined(__gda_server_connection_h__)
+#  define __gda_server_connection_h__
+
+#include <gda-error.h>
+#include <GNOME_Database.h>
+#include <bonobo/bonobo-xobject.h>
+
+G_BEGIN_DECLS
+
+typedef struct _GdaServerConnection        GdaServerConnection;
+typedef struct _GdaServerConnectionClass   GdaServerConnectionClass;
+typedef struct _GdaServerConnectionPrivate GdaServerConnectionPrivate;
+
+struct _GdaServerConnection {
+	BonoboXObject object;
+	GdaServerConnectionPrivate *priv;
+};
+
+struct _GdaServerConnectionClass {
+	BonoboXObjectClass parent_class;
+	POA_GNOME_Database_Connection__epv epv;
+};
+
+GType                gda_server_connection_get_type (void);
+GdaServerConnection *gda_server_connection_new (GdaServerProvider *provider);
+
+void                 gda_server_connection_add_error (GdaServerConnection *cnc,
+						      GdaError *error);
+void                 gda_server_connection_add_error_string (GdaServerConnection *cnc,
+							     const gchar *error);
+void                 gda_server_connection_free_error_list (GdaServerConnection *cnc);
+
+G_END_DECLS
+
+#endif
